--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,13 @@ header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
   display: contents;
 }
+
+body {
+  display: grid;
+  grid-template-columns: repeat (2, 1fr);
+  grid-template-rows: auto;
+}
+
+body:nth-child(2) {
+  grid-column: 1 / -1;
+}
