--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 6rem;
+  background-color: #f2f1ed;
 }
 
 .pano {
@@ -33,10 +34,10 @@ body {
 
 .logo {
   width: 14rem;
-  background-color: pink;
-  grid-column:1/2 ;
+  grid-column: 1/2;
   grid-row: 2/3;
   z-index: 1;
+  margin: 1rem;
 }
 
 nav {
@@ -50,7 +51,10 @@ ul {
   justify-content: space-around;
 }
 
-ul li {
+a {
   color: #fff;
-  text-decoration: none;
+}
+
+h2 {
+  color: #30658d;
 }
