--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,32 @@ header {
 
 body {
   margin: 0;
+  gap: 1rem;
+  display: grid;
+  background-color: #f2f1ed;
+  grid-template-areas:
+  "header"
+  "main";
+}
+header {
+  grid-area: header;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 6rem;
-  background-color: #f2f1ed;
+  grid-template-rows: 1fr 1fr;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
+main {
+  grid-area: main;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
 .pano {
   grid-column: 1 / -1;
   grid-row: 1 / 3;
@@ -34,10 +54,11 @@ body {
 
 .logo {
   width: 14rem;
-  grid-column: 1/2;
-  grid-row: 2/3;
+  grid-column: 1;
+  grid-row: 2;
   z-index: 1;
   margin: 1rem;
+  align-self: flex-end;
 }
 
 nav {
@@ -61,16 +82,6 @@ h2 {
   font-family: "Patua One", sans-serif;
 }
 
-main {
-  display: grid;
-  grid-template-areas:
-  "figure-1 figure-2"
-}
-
-main:nth-child(1){
-  grid-area: "figure-1"
-}
-
-main:nth-child(2){
-  grid-area: "figure-2"
+figure {
+  margin: 0;
 }
